Migrate YouTube and Substack syndication to MDX

--- a/src/content/blog/announcing-imfapi-user-friendly-access.mdx
+++ b/src/content/blog/announcing-imfapi-user-friendly-access.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Announcing imfapi: User-Friendly Access to IMF Data in R"
 date: "2025-10-25"
-excerpt: "New IMF API, new IMF API R library &#8212; part of the econdataverse initiative"
+excerpt: "New IMF API, new IMF API R library — part of the econdataverse initiative"
 image: "https://substackcdn.com/image/fetch/$s_!8T4q!,w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Fd5b9c38e-0712-4878-a5b1-2da15fff86bc_655x239.jpeg"
 sourceUrl: "https://modelingmarkets.substack.com/p/announcing-imfapi-user-friendly-access"
 sourceId: "https://modelingmarkets.substack.com/p/announcing-imfapi-user-friendly-access"
