--- a/src/content/blog/llms-from-command-line.mdx
+++ b/src/content/blog/llms-from-command-line.mdx
@@ -8,29 +8,7 @@ legacyId: "4"
 
 I recently had the pleasure of presenting at DevFest DC, where I demonstrated how to use Simon Willison's [LLM tool](https://llm.datasette.io/) to interact with large language models directly from the command line. The presentation was filmed by Agora Media and shared by OpenHub.
 
-<div class="video-container" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;margin:1.5rem 0;">
-
-<div class="iframe">
-
-<div id="player">
-
-</div>
-
-<div class="player-unavailable">
-
-# An error occurred.
-
-<div class="submessage">
-
-Unable to execute JavaScript.
-
-</div>
-
-</div>
-
-</div>
-
-</div>
+<div class="video-container" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;margin:1.5rem 0;"><iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="https://www.youtube.com/embed/XqJ6TVVA3Xw" title="LLMs from the Command Line - DevFest DC" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
 ## What is LLM?
 
