--- a/src/content/blog/youtube-RBTl94xeKqg.mdx
+++ b/src/content/blog/youtube-RBTl94xeKqg.mdx
@@ -7,29 +7,7 @@ sourceUrl: "https://www.youtube.com/watch?v=RBTl94xeKqg"
 sourceId: "youtube:RBTl94xeKqg"
 ---
 
-<div class="video-container" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;margin:1.5rem 0;">
-
-<div class="iframe">
-
-<div id="player">
-
-</div>
-
-<div class="player-unavailable">
-
-# An error occurred.
-
-<div class="submessage">
-
-Unable to execute JavaScript.
-
-</div>
-
-</div>
-
-</div>
-
-</div>
+<div class="video-container" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;margin:1.5rem 0;"><iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="https://www.youtube.com/embed/RBTl94xeKqg" title="Use Claude Code in RStudio to ship R code like some kind of 10x tidyverse developer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
 All the kids are talking about Claude Code. Maybe you've heard of it. But did you know you can use it to write R code right inside of RStudio? No more messing with Cursor to try to get it to play nice with your R dependencies; just you and Claude in the comfortable editor you know and love: <a href="https://posit.co/download/rstudio-desktop/." target="_blank" rel="noopener">https://posit.co/download/rstudio-desktop/.</a>
 
