--- a/src/content/blog/youtube-UZ-9U1W0e4o.mdx
+++ b/src/content/blog/youtube-UZ-9U1W0e4o.mdx
@@ -7,29 +7,7 @@ sourceUrl: "https://www.youtube.com/watch?v=UZ-9U1W0e4o"
 sourceId: "youtube:UZ-9U1W0e4o"
 ---
 
-<div class="video-container" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;margin:1.5rem 0;">
-
-<div class="iframe">
-
-<div id="player">
-
-</div>
-
-<div class="player-unavailable">
-
-# An error occurred.
-
-<div class="submessage">
-
-Unable to execute JavaScript.
-
-</div>
-
-</div>
-
-</div>
-
-</div>
+<div class="video-container" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;margin:1.5rem 0;"><iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="https://www.youtube.com/embed/UZ-9U1W0e4o" title="Become a command-line superhero with Simon Willison's `llm` tool — mini-hackathon recap, part 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
 A demo presentation I gave on Simon Willison's incredible \`llm\` command-line tool at the Coders' Colaboratory mini-hackathon in Latham, NY on July 5, 2025.
 
