--- a/src/content/blog/youtube-lQnBPqIpc2A.mdx
+++ b/src/content/blog/youtube-lQnBPqIpc2A.mdx
@@ -7,29 +7,7 @@ sourceUrl: "https://www.youtube.com/watch?v=lQnBPqIpc2A"
 sourceId: "youtube:lQnBPqIpc2A"
 ---
 
-<div class="video-container" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;margin:1.5rem 0;">
-
-<div class="iframe">
-
-<div id="player">
-
-</div>
-
-<div class="player-unavailable">
-
-# An error occurred.
-
-<div class="submessage">
-
-Unable to execute JavaScript.
-
-</div>
-
-</div>
-
-</div>
-
-</div>
+<div class="video-container" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;margin:1.5rem 0;"><iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="https://www.youtube.com/embed/lQnBPqIpc2A" title="Chat with the budget bill in five CLI commands with `llm` — mini-hackathon recap, part 2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
 At the July 5, 2025 Coders' Colaboratory mini-hackathon in Latham, NY. Developers had just one hour to find a cool use case for the \`llm\` command-line tool, created by Simon Willison. This video reviews the submissions. The winning project embedded the "Big Beautiful Bill" for RAG (Retrieval-Augmented Generation) with semantic search.
 
